# pkgutil

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  pkgutil.c
.github/workflows/: build.yaml  release.yml  test.yml
patches/: 0001-libarchive_enable_xar_support.patch  0002-feat-add-pbzx-read-filter.patch  0004-fix-windows-is-mvsc-confusion.patch  0004-xz-disable-x86-intrinsics-on-windows-arm64.patch
tests/: BUILD.bazel  exec_test.bzl  test.zig
