load("@bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

PLATFORMS = [
    "@llvm//platforms:macos_amd64",
    "@llvm//platforms:macos_arm64",
    "@llvm//platforms:linux_amd64_musl",
    "@llvm//platforms:linux_arm64_musl",
    "@llvm//platforms:windows_amd64",
]

config_setting(
    name = "is_windows_clang_mingw",
    constraint_values = ["@platforms//os:windows"],
    flag_values = {"@rules_cc//cc/compiler:compiler": "clang"},
)

cc_binary(
    name = "pkgutil",
    srcs = ["pkgutil.c"],
    linkopts = select({
        ":is_windows_clang_mingw": [
            "-lbcrypt",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "@libarchive//libarchive",
    ],
)

[
    platform_transition_binary(
        name = "for_" + platform.split(":")[1],
        binary = ":pkgutil",
        tags = ["manual"],
        target_platform = platform,
    )
    for platform in PLATFORMS
]

filegroup(
    name = "for_all_platforms",
    srcs = [
        ":for_" + platform.split(":")[1]
        for platform in PLATFORMS
    ],
    tags = ["manual"],
)
