module(
    name = "xpkgutil",
    version = "0.0.1",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"]
)

bazel_dep(name = "libarchive", version = "3.8.1")
bazel_dep(name = "rules_cc", version = "0.2.14")

# libarchive_bsdtar_windows_crlf.patch
# - tolerate mtree files with CRLF endings
# - TODO: remove when https://github.com/libarchive/libarchive/pull/2717 is merged
# libarchive_enable_xar_support.patch
# - add libxml2 dependency and md5 support to enable xar support
single_version_override(
    module_name = "libarchive",
    patches = [
        "//patches:libarchive_enable_xar_support.patch",
    ],
    patch_strip = 1,
)

# bazel9 support: to be upstreamed to libarchive
single_version_override(
    module_name = "bzip2",
    version = "1.0.8.bcr.3",
)

single_version_override(
    module_name = "xz",
    version = "5.4.5.bcr.7",
)

single_version_override(
    module_name = "mbedtls",
    version = "3.6.0.bcr.1",
)
