module(
    name = "xpkgutil",
    version = "0.0.1",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"]
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "libarchive", version = "3.8.1")
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.4.1")
bazel_dep(name = "rules_cc", version = "0.2.14")

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)

# 0001-libarchive_enable_xar_support.patch
# - add libxml2 dependency and md5 support to enable xar support
# 0002-feat-add-pbzx-read-filter-codex.patch
# - add pbzx read filter support to libarchive
single_version_override(
    module_name = "libarchive",
    patches = [
        "//patches:0001-libarchive_enable_xar_support.patch",
        "//patches:0002-feat-add-pbzx-read-filter.patch",
        "//patches:0003-give-mingw-acceptable-posix-types.patch",
    ],
    patch_strip = 1,
)

single_version_override(
    module_name = "libxml2",
    patches = [
        "//patches:0004-fix-windows-is-mvsc-confusion.patch",
    ],
    patch_strip = 1
)

# bazel9 support: to be upstreamed to libarchive
single_version_override(
    module_name = "bzip2",
    version = "1.0.8.bcr.3",
)

single_version_override(
    module_name = "zstd",
    version = "1.5.7.bcr.1",
)

single_version_override(
    module_name = "xz",
    version = "5.4.5.bcr.7",
)

single_version_override(
    module_name = "mbedtls",
    version = "3.6.0.bcr.1",
)
