module(
    name = "xpkgutil",
    version = "0.0.1",
    compatibility_level = 1,
    bazel_compatibility = [">=7.2.1"]
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "libarchive", version = "3.8.1")
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.4.1")
bazel_dep(name = "rules_cc", version = "0.2.14")

bazel_dep(name = "bazel_skylib", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.5.0", dev_dependency = True)
bazel_dep(name = "rules_zig", version = "0.12.3", dev_dependency = True)

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)

single_version_override(
    module_name = "libarchive",
    patches = [
        "//patches:0001-libarchive_enable_xar_support.patch",
        "//patches:0002-feat-add-pbzx-read-filter.patch",
        "//patches:0003-give-mingw-acceptable-posix-types.patch",
    ],
    patch_strip = 1,
)

# bazel9 support: to be upstreamed to libarchive
single_version_override(
    module_name = "bzip2",
    version = "1.0.8.bcr.3",
)

single_version_override(
    module_name = "zstd",
    version = "1.5.7.bcr.1",
)

single_version_override(
    module_name = "xz",
    version = "5.4.5.bcr.7",
)

single_version_override(
    module_name = "mbedtls",
    version = "3.6.0.bcr.1",
)

single_version_override(
    module_name = "zlib",
    version = "1.3.1.bcr.8",
)

## TESTS

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "component_pkg",
    urls = ["https://swcdn.apple.com/content/downloads/52/01/082-41241-A_0747ZN8FHV/dectd075r63pppkkzsb75qk61s0lfee22j/CLTools_macOSNMOS_SDK.pkg"],
    downloaded_file_path = "component.pkg",
    sha256 = "ba3453d62b3d2babf67f3a4a44e8073d6555c85f114856f4390a1f53bd76e24a",
)

http_file(
    name = "product_pkg",
    urls = ["https://www.python.org/ftp/python/3.14.3/python-3.14.3-macos11.pkg"],
    downloaded_file_path = "product.pkg",
    sha256 = "50b709f72cb5ed87d5882901923face981dd657569717761832c36db3bf08238",
)

archive_override(
    module_name = "toolchains_llvm_bootstrapped",
    urls = ["https://github.com/cerisier/toolchains_llvm_bootstrapped/archive/9799c1d0d976409451bbe5275e8d3d607e442956.tar.gz"],
    strip_prefix = "toolchains_llvm_bootstrapped-9799c1d0d976409451bbe5275e8d3d607e442956",
    integrity = "sha256-SJuGXePryLXuDemHsvfajLFMHT+vonxstVddkJlhbrg=",
)
